# postgrest-rs

./: .editorconfig  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
examples/: minimum.rs  test.rs
src/: builder.rs  filter.rs  lib.rs
tests/: client.rs  multi_schema.rs
tests/db/: 00-schema.sql  01-dummy-data.sql  docker-compose.yml
