[package]
name = "postgrest"
version = "1.6.0"
authors = ["Bobbie Soedirgo <bobbie@soedirgo.dev>"]
description = "PostgREST client-side library"
homepage = "https://github.com/supabase/postgrest-rs"
repository = "https://github.com/supabase/postgrest-rs"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["postgres", "postgrest", "rest", "api"]
categories = ["development-tools"]
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = { version = "1.0.128", optional = true }
serde = { version = "1.0.210", optional = true }

[dev-dependencies]
json = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }

[features]
serde = ["dep:serde_json", "dep:serde"]
